--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                 <li>Project Document – Overview and Structure</li>
                 <li>HR Responsibilities</li>
                 <li>Next Steps & Action Items</li>
+                <li>✅ Responsible = Owns and executes the task.
+
+✅ Owner = Holds final responsibility/sign-off.
+
+🔹 Consulted = Provides input/advice.
+
+🔹 Informed = Kept updated.
+</li>
             </ol>
         </div>
     </div>
