--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                 <li>Project Document – Overview and Structure</li>
                 <li>HR Responsibilities</li>
                 <li>Next Steps & Action Items</li>
+                <li>✅ Responsible = Owns and executes the task.</li>
+
+<li>✅ Owner = Holds final responsibility/sign-off.</li>
+
+<li>🔹 Consulted = Provides input/advice.<br>
+
+🔹 Informed = Kept updated.</li>
+</li>
             </ol>
         </div>
     </div>
