--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <li>Calendar Usage for Planning</li>
                 <li>Improving Professional & Team Behavior</li>
                 <li>Project Document – Overview and Structure</li>
-                <li>HR Responsibilities</li>
+                <li>HR Guideline</li>
                 <li>Next Steps & Action Items</li>
             </ol>
         </div>
@@ -450,13 +450,12 @@
         </div>
     </div>
     
-    <!-- Slide 9: HR Responsibilities -->
-    <div id="slide-9" class="slide">
+    <!-- Slide HR Guideline(Who&How) -->
+    <div id="slide-9" class="slide"9:>
         <div class="w-full max-w-4xl card p-10 rounded-2xl">
             <h2 class="text-4xl font-bold text-center mb-8 gradient-text bg-gradient-to-r from-fuchsia-500 to-cyan-400">HR Responsibilities</h2>
              <div class="grid grid-cols-1 md:grid-cols-2 gap-x-12 gap-y-6 text-lg text-slate-200">
                 <p class="border-l-4 border-fuchsia-500 pl-4">Leave & attendance tracking</p>
-                <p class="border-l-4 border-fuchsia-500 pl-4">Onboarding/offboarding process</p>
                 <p class="border-l-4 border-fuchsia-500 pl-4">Maintaining team behavior and work culture</p>
                 <p class="border-l-4 border-fuchsia-500 pl-4">Coordinating holidays and WFH requests</p>
                 <p class="border-l-4 border-fuchsia-500 pl-4 col-span-1 md:col-span-2">Addressing employee concerns and feedback</p>
